home and sign in-up

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/styles.min.css"/>
     <!-- @endif -->
 
+    <link href="https://file.myfontastic.com/T2KG9rVB6pAiPa2kHCVojX/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 
