--- a/src/inc/_scriptsFooter.html
+++ b/src/inc/_scriptsFooter.html
@@ -12,10 +12,15 @@
 <!-- modules -->
 <script src="modules/commons/models/entity.js"></script>
 <script src="modules/commons/models/user.js"></script>
+<script src="modules/commons/services/user-service.js"></script>
 <script src="modules/commons/commons.js"></script>
 
 <script src="modules/home/controllers/home-controller.js"></script>
 <script src="modules/home/home.js"></script>
+
+<script src="modules/signin/controllers/get-user-name-controller.js"></script>
+<script src="modules/signin/controllers/signin-with-email-controller.js"></script>
+<script src="modules/signin/signin.js"></script>
 
 <script src="app.js"></script>
 <!-- @endif -->
