--- a/src/inc/_scriptsFooter.html
+++ b/src/inc/_scriptsFooter.html
@@ -12,8 +12,13 @@
 <!-- modules -->
 <script src="modules/commons/models/entity.js"></script>
 <script src="modules/commons/models/user.js"></script>
+<script src="modules/commons/models/goal.js"></script>
 <script src="modules/commons/services/user-service.js"></script>
+<script src="modules/commons/services/goal-service.js"></script>
 <script src="modules/commons/commons.js"></script>
+
+<script src="modules/goals/controllers/goal-name-controller.js"></script>
+<script src="modules/goals/goals.js"></script>
 
 <script src="modules/home/controllers/home-controller.js"></script>
 <script src="modules/home/home.js"></script>
