--- a/src/inc/_scriptsFooter.html
+++ b/src/inc/_scriptsFooter.html
@@ -18,6 +18,9 @@
 <script src="modules/commons/commons.js"></script>
 
 <script src="modules/goals/controllers/goal-name-controller.js"></script>
+<script src="modules/goals/controllers/goal-cost-controller.js"></script>
+<script src="modules/goals/controllers/goal-months-controller.js"></script>
+<script src="modules/goals/controllers/goal-first-result-controller.js"></script>
 <script src="modules/goals/goals.js"></script>
 
 <script src="modules/home/controllers/home-controller.js"></script>
