Calculating goal monthly and saving and returning a list of goals

--- a/src/inc/_scriptsFooter.html
+++ b/src/inc/_scriptsFooter.html
@@ -15,12 +15,14 @@
 <script src="modules/commons/models/goal.js"></script>
 <script src="modules/commons/services/user-service.js"></script>
 <script src="modules/commons/services/goal-service.js"></script>
+<script src="modules/commons/directives/clear-on-focus.js"></script>
 <script src="modules/commons/commons.js"></script>
 
 <script src="modules/goals/controllers/goal-name-controller.js"></script>
 <script src="modules/goals/controllers/goal-cost-controller.js"></script>
 <script src="modules/goals/controllers/goal-months-controller.js"></script>
 <script src="modules/goals/controllers/goal-first-result-controller.js"></script>
+<script src="modules/goals/controllers/goal-list-controller.js"></script>
 <script src="modules/goals/goals.js"></script>
 
 <script src="modules/home/controllers/home-controller.js"></script>
